added total 6 month term premium

--- a/premium6months.html
+++ b/premium6months.html
@@ -25,6 +25,9 @@
                     <h4>Enter premium of vehicles</h4>
                     <input id="premiumInput" type="number" placeholder="Enter premium"> 
                     <button onclick="pushFunction()">Add Premium</button>
+                    <input id="totalPremium" type="number" placeholder="Enter 6month premium">
+                    <button onclick="pushTotalPremium()">6month Premium</button>
+                    <button onclick="calculatePremium()">Calculate New Premium</button>
                 </div>    
             </div>
             <div class="col-md-4">
