added sum function

--- a/premium6months.html
+++ b/premium6months.html
@@ -25,8 +25,8 @@
                     <h4>Enter premium of vehicles</h4>
                     <input id="premiumInput" type="number" placeholder="Enter premium"> 
                     <button onclick="pushFunction()">Add Premium</button>
-                    <input id="totalPremium" type="number" placeholder="Enter 6month premium">
-                    <button onclick="pushTotalPremium()">6month Premium</button>
+                    <input id="totalPremiumInput" type="number" placeholder="Enter 6month premium">
+                    <button onclick="pushFunction()">6month Premium</button>
                     <button onclick="calculatePremium()">Calculate New Premium</button>
                 </div>    
             </div>
