--- a/premium6months.html
+++ b/premium6months.html
@@ -26,7 +26,7 @@
                     <input id="premiumInput" type="number" placeholder="Enter premium"> 
                     <button onclick="pushFunction()">Add Premium</button>
                     <input id="totalPremiumInput" type="number" placeholder="Enter 6month premium">
-                    <button onclick="pushFunction()">6month Premium</button>
+                    <button onclick="push2Function()">6month Premium</button>
                     <button onclick="calculatePremium()">Calculate New Premium</button>
                 </div>    
             </div>
@@ -35,9 +35,7 @@
                 <div class="card">
                     <div class="card-block">
                         <div id="oldPremium">
-                            <ul>
-
-                            </ul>
+                           
                         </div>
                     </div>
                 </div>    
@@ -47,9 +45,7 @@
                     <div class="card">
                         <div class="card-block">
                             <div id="newPremium">
-                                <ul>
-
-                                </ul>
+                               
                             </div>
                         </div>
                     </div>
