--- a/premium6months.html
+++ b/premium6months.html
@@ -25,8 +25,8 @@
                     <h4>Enter premium of vehicles</h4>
                     <input id="premiumInput" type="number" placeholder="Enter premium"> 
                     <button onclick="pushFunction()">Add Premium</button>
-                    <input id="totalPremiumInput" type="number" placeholder="Enter 6month premium">
-                    <button onclick="push2Function()">6month Premium</button>
+                    <input id="monthlyPaymentInput" type="number" placeholder="Enter montly payment">
+                    <button onclick="push2Function()">Monthly Payment</button>
                     <button onclick="calculatePremium()">Calculate New Premium</button>
                 </div>    
             </div>
@@ -54,7 +54,7 @@
 
         </div>
     </div>
-    <script src="6month.js"></script>
+    <script src="6monthV2.js"></script>
 </body>
 </html>
                         
