changed bg color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body{
             margin-top: 70px;
-            background: #ffe0e0	;
+            background: #cc99ff	;
         }   
     </style>
 </head>
